# Copyright 2021 The Turbo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "//turbo:copts/configure_copts.bzl",
    "TURBO_DEFAULT_COPTS",
    "TURBO_DEFAULT_LINKOPTS",
    "TURBO_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_library(
    name = "cleanup_internal",
    hdrs = ["internal/cleanup.h"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        "//turbo/base:base_internal",
        "//turbo/base:core_headers",
        "//turbo/utility",
    ],
)

cc_library(
    name = "cleanup",
    hdrs = [
        "cleanup.h",
    ],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS,
    deps = [
        ":cleanup_internal",
        "//turbo/base:config",
        "//turbo/base:core_headers",
    ],
)

cc_test(
    name = "cleanup_test",
    size = "small",
    srcs = [
        "cleanup_test.cc",
    ],
    copts = TURBO_TEST_COPTS,
    deps = [
        ":cleanup",
        "//turbo/base:config",
        "//turbo/utility",
        "@com_google_googletest//:gtest_main",
    ],
)
